--- a/src/main/resources/templates/addDish.html
+++ b/src/main/resources/templates/addDish.html
@@ -47,7 +47,7 @@
             <label class="form-label" for="image">Image</label>
             <input type="file" name="dishImage" class="form-control" id="image">
         </div>
-        <button type="submit" class="btn btn-primary">Add Restaurant</button>
+        <button type="submit" class="btn btn-primary">Add Dish</button>
     </form>
 </div>
 </body>
