--- a/src/main/resources/templates/fragments/navBar.html
+++ b/src/main/resources/templates/fragments/navBar.html
@@ -25,10 +25,11 @@
 <!--                    <a href="#" class="nav-item nav-link disabled" tabindex="-1">Reports</a>-->
                 </div>
                 <div class="navbar-nav ms-auto">
-                    <a href="#" class="nav-item nav-link">Login</a>
+                    <a href="/login" class="nav-item nav-link">Login</a>
                     <a href="#" class="nav-item nav-link">Order History</a>
                     <a href="#" class="nav-item nav-link">Your Cart</a>
                     <a href="/registration" class="nav-item nav-link">Registration</a>
+                    <a href="#" class="nav-item nav-link">Logout</a>
                 </div>
             </div>
         </div>
