--- a/src/main/resources/templates/restaurantPage.html
+++ b/src/main/resources/templates/restaurantPage.html
@@ -38,9 +38,9 @@
 <div th:object="${dishCategoryDtoList}" class="container my-3 2-70" style="text-align: left;">
     <th:block th:each="dishCategoryDto : ${dishCategoryDtoList} ">
     <div class="container my-4 ">
-        <h1 class="ms-5 " th:text="${dishCategoryDto.categoryName}"></h1>
+        <h1  th:if="${not #lists.isEmpty(dishCategoryDto.dishDtoList)}" class="ms-5 " th:text="${dishCategoryDto.categoryName}"></h1>
         <div class="container d-flex flex-wrap justify-content-left ">
-            <th:block  th:each="dishDto : ${dishCategoryDto.dishDtoList}">
+            <th:block th:each="dishDto : ${dishCategoryDto.dishDtoList}">
                 <a  th:href="@{/dish/{x}(x=${dishDto.id})}" class="nav-link m-0 p-0 btn-outline-light">
                     <div class="card bg-light text-dark m-3" style="width:300px">
                         <h4 class="card-header" th:text="${dishDto.name}"></h4>
@@ -49,7 +49,7 @@
 <!--                        <div class="card-footer" th:text="${dishDto.price + '$'}">12.4</div>-->
 <!--                        <img th:src="@{${'data:image/png; base64, ' + dishDto.imageName}}" alt="Imagine product"/>-->
                         <img th:src="@{'../img/dish/' + ${dishDto.imageName}}" alt="Imagine product"/>
-                        <img th:src="@{/img/ image_3.jpg}"  alt="Imagine product"/>
+<!--                        <img th:src="@{/img/ image_3.jpg}"  alt="Imagine product"/>-->
 <!--                        <img th:src="@{${'src/main/resources/static/img/dish/' + 'dish_1.jpg'}}" alt="Imagine product"/>-->
                         <div class="card-footer" th:text="${dishDto.price + '$'}">12.4</div>
                     </div>
