change to longblob

--- a/src/main/resources/templates/addRestaurant.html
+++ b/src/main/resources/templates/addRestaurant.html
@@ -43,7 +43,11 @@
         </div>
         <div class="mb-3">
             <label class="form-label" for="logo">Logo</label>
-            <input type="file" name="restaurantImage" class="form-control" id="logo" required>
+            <input type="file" name="restaurantLogo" class="form-control" id="logo" required>
+        </div>
+        <div class="mb-3">
+            <label class="form-label" for="logo">Background image</label>
+            <input type="file" name="restaurantBackgroundImg" class="form-control" id="backGroundImage" required>
         </div>
         <button type="submit" class="btn btn-primary">Add Restaurant</button>
     </form>
