--- a/src/main/resources/templates/restaurantPage.html
+++ b/src/main/resources/templates/restaurantPage.html
@@ -8,14 +8,13 @@
 </head>
 <body>
 <div th:insert="fragments/navBar"></div>
-<div class="container p-1 my-5" style="text-align: center;">
+<div th:object="${restaurantDto}" class="container p-1 my-5" style="text-align: center;">
     <div class="card " style="border-radius: 100px">
-        <!--        justify-content-center align-items-center-->
         <img class="card-img-fluid w-auto h-auto border border-5" style="border-radius: 100px"
-             th:src="@{/img/image_3.jpg}" alt="Card image">
+             th:src="${restaurantDto.backgroundImage}" alt="Card image">
+
         <div class="card-img-overlay p-5 text-white ">
-            <img class="card-header" th:src="${'data:image/png; base64, ' + restaurantDto.logo}" style=" height: 150px"
-                 alt="Product image">
+            <img class="card-header" th:src="${restaurantDto.logo}" style=" height: 150px" alt="Product image">
             <h1 class="card-header-title" th:text="${restaurantDto.name}"></h1>
             <h4 class="card-header" th:text="${restaurantDto.restaurantSpecific}"></h4>
             <h4 class="card-body" th:text="${restaurantDto.description}"></h4>
@@ -25,6 +24,7 @@
 
     </div>
 </div>
+
 <nav class="navbar navbar-expand-sm bg-light justify-content-center">
     <ul class="navbar-nav">
         <li class="nav-item px-3 ">
@@ -35,30 +35,29 @@
         </li>
     </ul>
 </nav>
-<div th:object="${dishCategoryDtoList}" class="container my-3 2-70" style="text-align: left;">
-    <th:block th:each="dishCategoryDto : ${dishCategoryDtoList} ">
+
+
+<div class="container my-3 2-70" style="text-align: left;">
+    <th:block th:each="dishCategoryDto : ${dishCategoryDtoList}">
     <div class="container my-4 ">
-        <h1  th:if="${not #lists.isEmpty(dishCategoryDto.dishDtoList)}" class="ms-5 " th:text="${dishCategoryDto.categoryName}"></h1>
+        <h1  class="ms-5 " th:text="${dishCategoryDto.categoryName}"></h1>
         <div class="container d-flex flex-wrap justify-content-left ">
             <th:block th:each="dishDto : ${dishCategoryDto.dishDtoList}">
                 <a  th:href="@{/dish/{x}(x=${dishDto.id})}" class="nav-link m-0 p-0 btn-outline-light">
                     <div class="card bg-light text-dark m-3" style="width:300px">
                         <h4 class="card-header" th:text="${dishDto.name}"></h4>
-<!--                        <div class="card-body" th:text="${dishDto.description}"></div>-->
-<!--                        <div class="card-body" th:text="${'Cooking time: ' + dishDto.cookingTime}"></div>-->
-<!--                        <div class="card-footer" th:text="${dishDto.price + '$'}">12.4</div>-->
-<!--                        <img th:src="@{${'data:image/png; base64, ' + dishDto.imageName}}" alt="Imagine product"/>-->
-                        <img th:src="@{'../img/dish/' + ${dishDto.imageName}}" alt="Imagine product"/>
-<!--                        <img th:src="@{/img/ image_3.jpg}"  alt="Imagine product"/>-->
-<!--                        <img th:src="@{${'src/main/resources/static/img/dish/' + 'dish_1.jpg'}}" alt="Imagine product"/>-->
+
+                        <img th:src="${dishDto.image}" alt="Imagine product">
+
+
                         <div class="card-footer" th:text="${dishDto.price + '$'}">12.4</div>
                     </div>
                 </a>
             </th:block>
         </div>
     </div>
-    </th:block>
-</div>
+    </di>
+</th:block>
 
 </body>
 </html>
