--- a/src/main/resources/templates/fragments/navBar.html
+++ b/src/main/resources/templates/fragments/navBar.html
@@ -29,7 +29,7 @@
                     <a href="#" class="nav-item nav-link">Order History</a>
                     <a href="#" class="nav-item nav-link">Your Cart</a>
                     <a href="/registration" class="nav-item nav-link">Registration</a>
-                    <a href="#" class="nav-item nav-link">Logout</a>
+                    <a href="/logout" class="nav-item nav-link">Logout</a>
                 </div>
             </div>
         </div>
