--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,19 +16,36 @@
 </head>
 <body>
 <div th:insert="fragments/navBar"></div>
+<!--<div class="m-4" >-->
+<!--    <h1>Login</h1>-->
+<!--    <form th:object="${loginDto}"  action="/login" method="post">-->
+<!--        <div class="mb-3">-->
+<!--            <label class="form-label" for="email">Email</label>-->
+<!--            <input th:field="*{email}" type="text" class="form-control" id="email" placeholder="Email" name="username" required>-->
+<!--        </div>-->
+<!--        <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>-->
+<!--        <div class="mb-3">-->
+<!--            <label class="form-label" for="password">Password</label>-->
+<!--            <input th:field="*{password}" type="password" class="form-control" id="password" placeholder="Password" name="password" required>-->
+<!--        </div>-->
+<!--        <div th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>-->
+<!--        <button type="submit" class="btn btn-primary">LOGIN</button>-->
+<!--        <div th:text="${loginMessage}"></div>-->
+<!--    </form>-->
+<!--</div>-->
+
 <div class="m-4" >
     <h1>Login</h1>
-    <form th:object="${loginDto}"  action="/login" method="post">
+    <form action="/login" method="post">
         <div class="mb-3">
             <label class="form-label" for="email">Email</label>
-            <input th:field="*{email}" type="text" class="form-control" id="email" placeholder="Email" required>
+            <input type="email" class="form-control" id="email" placeholder="Email" name="username" required>
         </div>
         <div class="mb-3">
             <label class="form-label" for="password">Password</label>
-            <input th:field="*{password}" type="password" class="form-control" id="password" placeholder="Password" required>
+            <input type="password" class="form-control" id="password" placeholder="Password" name="password" required>
         </div>
         <button type="submit" class="btn btn-primary">LOGIN</button>
-        <div th:text="${loginMessage}"></div>
     </form>
 </div>
 
