--- a/src/main/resources/templates/restaurantPage.html
+++ b/src/main/resources/templates/restaurantPage.html
@@ -15,12 +15,13 @@
 
         <div class="card-img-overlay p-5 text-white ">
             <img class="card-header" th:src="${restaurantDto.logo}" style=" height: 150px" alt="Product image">
-
-            <h1 class="card-header-title" th:text="${restaurantDto.name}"></h1>
-            <h4 class="card-header" th:text="${restaurantDto.restaurantSpecific}"></h4>
-            <h4 class="card-body" th:text="${restaurantDto.description}"></h4>
-            <h2 class="card-footer" th:text="${restaurantDto.address}"></h2>
-            <h2 class="card-footer" th:text="${restaurantDto.phoneNo}"></h2>
+            <div style="display: flex; flex-direction: column; align-items: flex-start; font-size: 50px; padding-top: 100px">
+                <div class="card-body" th:text="'Nume Restaurant: ' + ${restaurantDto.name}"></div>
+                <div class="card-body" th:text="'Descriere: ' + ${restaurantDto.description}"></div>
+                <div class="card-body" th:text="'Specific: ' + ${restaurantDto.restaurantSpecific}"></div>
+                <div class="card-body" th:text="'Adresa: ' + ${restaurantDto.address}"></div>
+                <div class="card-body" th:text="'Telefon: ' + ${restaurantDto.phoneNo}"></div>
+            </div>
         </div>
 
     </div>
@@ -40,24 +41,24 @@
 
 <div class="container my-3 2-70" style="text-align: left;">
     <th:block th:each="dishCategoryDto : ${dishCategoryDtoList}">
-    <div class="container my-4 ">
-        <h1  class="ms-5 " th:text="${dishCategoryDto.categoryName}"></h1>
-        <div class="container d-flex flex-wrap justify-content-left ">
-            <th:block th:each="dishDto : ${dishCategoryDto.dishDtoList}">
-                <a  th:href="@{/dish/{x}(x=${dishDto.id})}" class="nav-link m-0 p-0 btn-outline-light">
-                    <div class="card bg-light text-dark m-3" style="width:300px">
-                        <h4 class="card-header" th:text="${dishDto.name}"></h4>
+        <div class="container my-4 ">
+            <h1 class="ms-5 " th:text="${dishCategoryDto.categoryName}"></h1>
+            <div class="container d-flex flex-wrap justify-content-left ">
+                <th:block th:each="dishDto : ${dishCategoryDto.dishDtoList}">
+                    <a th:href="@{/dish/{x}(x=${dishDto.id})}" class="nav-link m-0 p-0 btn-outline-light">
+                        <div class="card bg-light text-dark m-3" style="width:300px">
+                            <h4 class="card-header" th:text="${dishDto.name}"></h4>
 
-                        <img th:src="${dishDto.image}" alt="Imagine product">
+                            <img th:src="${dishDto.image}" alt="Imagine product">
 
-                        <div class="card-footer" th:text="${dishDto.price + '$'}">12.4</div>
-                    </div>
-                </a>
-            </th:block>
+                            <div class="card-footer" th:text="${dishDto.price}"></div>
+                        </div>
+                    </a>
+                </th:block>
+            </div>
         </div>
-    </div>
 
-</th:block>
-    </div>
+    </th:block>
+</div>
 </body>
 </html>
