--- a/src/main/resources/templates/addDish.html
+++ b/src/main/resources/templates/addDish.html
@@ -5,14 +5,7 @@
     <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-    <style>
-    .m-4{
-        text-align: center;
-    }
-    form{
-        max-width: 640px;margin: 0 auto;text-align: left;
-    }
-    </style>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 <div th:insert="fragments/navBar"></div>
@@ -23,18 +16,29 @@
             <label class="form-label" for="name">Dish name</label>
             <input th:field="*{name}" type="text" class="form-control" id="name" placeholder="Name" required>
         </div>
+        <div>
+            <p th:each="error : ${#fields.errors('name')}" th:text="${error}" class="error"/>
+        </div>
         <div class="mb-3">
             <label class="form-label" for="description">Description</label>
             <input th:field="*{description}" type="text" class="form-control" id="description" placeholder="Description" required>
+        </div>
+        <div>
+            <p th:each="error : ${#fields.errors('description')}" th:text="${error}" class="error"/>
         </div>
         <div class="mb-3">
             <label class="form-label" for="cookingTime">Cooking Time (Minutes)</label>
             <input th:field="*{cookingTime}" type="text" class="form-control" id="cookingTime" placeholder="Cooking Time" required>
         </div>
-
+        <div>
+            <p th:each="error : ${#fields.errors('cookingTime')}" th:text="${error}" class="error"/>
+        </div>
         <div class="mb-3">
             <label class="form-label" for="price">Price</label>
             <input th:field="*{price}" type="text" class="form-control" id="price" placeholder="Price" required>
+        </div>
+        <div>
+            <p th:each="error : ${#fields.errors('price')}" th:text="${error}" class="error"/>
         </div>
         <div class="mb-3">
             <label class="form-label" for="category">Category</label>
@@ -43,9 +47,15 @@
                         th:value="${dishOpt}" th:text="${dishOpt}"></option>
             </select>
         </div>
+        <div>
+            <p th:each="error : ${#fields.errors('category')}" th:text="${error}" class="error"/>
+        </div>
         <div class="mb-3">
             <label class="form-label" for="image">Image</label>
-            <input type="file" name="dishImage" class="form-control" id="image">
+            <input type="file" name="dishImage" class="form-control" id="image" required>
+        </div>
+        <div>
+            <p th:each="error : ${#fields.errors('image')}" th:text="${error}" class="error"/>
         </div>
         <button type="submit" class="btn btn-primary">Add Dish</button>
     </form>
