--- a/src/main/resources/templates/addRestaurant.html
+++ b/src/main/resources/templates/addRestaurant.html
@@ -5,14 +5,7 @@
     <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-    <style>
-    .m-4{
-        text-align: center;
-    }
-    form{
-        max-width: 640px;margin: 0 auto;text-align: left;
-    }
-    </style>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 <div th:insert="fragments/navBar"></div>
@@ -20,35 +13,56 @@
     <form th:object="${restaurantDto}"  action="/addRestaurant" method="post" enctype="multipart/form-data">
         <div class="mb-3">
             <label class="form-label" for="name">Restaurant name</label>
-            <input th:field="*{name}" type="text" class="form-control" id="name" placeholder="Name" required>
+            <input th:field="*{name}" type="text" class="form-control" id="name" placeholder="Name">
+        </div>
+        <div>
+            <p th:each="error : ${#fields.errors('name')}" th:text="${error}" class="error"/>
         </div>
         <div class="mb-3">
             <label class="form-label" for="description">Description</label>
-            <input th:field="*{description}" type="text" class="form-control" id="description" placeholder="Description" required>
+            <input th:field="*{description}" type="text" class="form-control" id="description" placeholder="Description">
+        </div>
+        <div>
+            <p th:each="error : ${#fields.errors('description')}" th:text="${error}" class="error"/>
         </div>
         <div class="mb-3">
             <label class="form-label" for="address">Address</label>
-            <input th:field="*{address}" type="text" class="form-control" id="address" placeholder="Address" required>
+            <input th:field="*{address}" type="text" class="form-control" id="address" placeholder="Address">
+        </div>
+        <div>
+            <p th:each="error : ${#fields.errors('address')}" th:text="${error}" class="error"/>
         </div>
         <div class="mb-3">
             <label class="form-label" for="phoneNumber">Phone no.</label>
-            <input th:field="*{phoneNo}" type="text" class="form-control" id="phoneNumber" placeholder="Phone Number" required>
+            <input th:field="*{phoneNo}" type="text" class="form-control" id="phoneNumber" placeholder="Phone Number">
+        </div>
+        <div>
+            <p th:each="error : ${#fields.errors('phoneNo')}" th:text="${error}" class="error"/>
         </div>
         <div class="mb-3">
             <label class="form-label" for="restaurantSpecific">Restaurant specific</label>
-            <select th:field="*{restaurantSpecific}" class="form-control" id="restaurantSpecific"  required>
+            <select th:field="*{restaurantSpecific}" class="form-control" id="restaurantSpecific">
                 <option th:each="specificOpt : ${T(com.sda.QuickBite.enums.RestaurantSpecific).values()}"
                         th:value="${specificOpt}" th:text="${specificOpt}"></option>
             </select>
+        </div>
+        <div>
+            <p th:each="error : ${#fields.errors('restaurantSpecific')}" th:text="${error}" class="error"/>
         </div>
         <div class="mb-3">
             <label class="form-label" for="logo">Logo</label>
             <input type="file" name="restaurantLogo" class="form-control" id="logo" required>
         </div>
+<!--        <div>-->
+<!--            <p th:each="error : ${#fields.errors('logo')}" th:text="${error}" class="error"/>-->
+<!--        </div>-->
         <div class="mb-3">
-            <label class="form-label" for="logo">Background image</label>
-            <input type="file" name="restaurantBackgroundImg" class="form-control" id="backGroundImage" required>
+            <label class="form-label" for="backgroundImage">Background image</label>
+            <input type="file" name="restaurantBackground" class="form-control" id="backgroundImage" required>
         </div>
+<!--        <div>-->
+<!--            <p th:each="error : ${#fields.errors('backgroundImage')}" th:text="${error}" class="error"/>-->
+<!--        </div>-->
         <button type="submit" class="btn btn-primary">Add Restaurant</button>
     </form>
 </div>
