--- a/src/main/resources/templates/dish.html
+++ b/src/main/resources/templates/dish.html
@@ -2,55 +2,33 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Dish Ppage</title>
+    <title>Dish Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
 <div th:insert="fragments/navBar"></div>
 <div class="container-fluid mt-3">
-    <div th:object="${dishDto}"   class="container-fluid">
-        <div class="row">
-            <div class="col-sm-4 bg-white text-white">
-               <img th:src="${dishDto.image}" alt="Dish Image" style="height: 400px ">
+    <div th:object="${dishDto}" class="row">
+        <div class="col-md-4">
+            <div class="card">
+                <img th:src="${dishDto.image}" alt="Dish Image" class="card-img-top" style="height: 400px">
             </div>
-            <div class="col-sm-8 bg-dark text-white d-flex flex-column">
-                <br><br>
-                <h3  th:text="${dishDto.name}"></h3>
-                <br>
-                <p th:text="${dishDto.description}"></p>
-                <br>
-                <h5 th:text="${dishDto.price}">Price</h5>
-                <div class="mt-auto mb-3 d-flex justify-content-between">
-                    <div style="width: 40%;"></div>
-                    <div>
-                        <button type="button" class="btn btn-outline-primary">Add to cart</button>
+        </div>
+        <div class="col-md-8">
+            <div class="card bg-dark text-white h-100">
+                <div class="card-body d-flex flex-column justify-content-between">
+                    <h3 class="card-title" th:text="${dishDto.name}"></h3>
+                    <p class="card-text" th:text="${dishDto.description}"></p>
+                    <h5 class="card-text" th:text="'Price: ' + ${dishDto.price}"></h5>
+                    <div class="mt-3 d-flex justify-content-end">
+                        <button type="button" class="btn btn-outline-primary mr-2">Add to cart</button>
+                        <button type="button" class="btn btn-outline-secondary" onclick="location.href='/restaurantPage/1'">Back to menu</button>
                     </div>
-                    <div style="width: 50%;"></div>
-                    <div>
-                        <button type="button" class="btn btn-outline-secondary">Back to menu</button>
-                    </div>
-                    <div style="width: 10%;"></div>
                 </div>
             </div>
         </div>
     </div>
-<!--=======-->
-<!--<div class="container p-1 my-5" style="text-align: center;">-->
-<!--  <div class="card " style="border-radius: 100px">-->
-
-<!--    <div class="card p-5">-->
-<!--      <img class="card-header" th:src="${'data:image/png; base64, ' + dishDto.image}" style=" height: 150px"-->
-<!--           alt="Product image">-->
-<!--      <div class="card-header-title" th:text="${dishDto.name}"></div>-->
-<!--      <div class="card-body" th:text="${dishDto.description}"></div>-->
-<!--      <div class="card-header" th:text="${dishDto.price}"></div>-->
-<!--&lt;!&ndash;      <h2 class="card-footer" th:text="${dishDtoDto.address}"></h2>&ndash;&gt;-->
-<!--&lt;!&ndash;      <h2 class="card-footer" th:text="${dishDtoDto.phoneNo}"></h2>&ndash;&gt;-->
-<!--&gt;>>>>>> Stashed changes-->
-
-
-
 </div>
 </body>
 </html>
