--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -5,14 +5,7 @@
     <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-    <style>
-    .m-4{
-        text-align: center;
-    }
-    form{
-        max-width: 640px;margin: 0 auto;text-align: left;
-    }
-    </style>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 <div th:insert="fragments/navBar"></div>
@@ -21,23 +14,38 @@
     <form th:object="${userDto}"  action="/registration" method="post">
         <div class="mb-3">
             <label class="form-label" for="firstName">First name</label>
-            <input th:field="*{firstName}" type="text" class="form-control" id="firstName" placeholder="First name" required>
+            <input th:field="*{firstName}" type="text" class="form-control" id="firstName" placeholder="First name">
+        </div>
+        <div>
+            <p th:each="error : ${#fields.errors('firstName')}" th:text="${error}" class="error"/>
         </div>
         <div class="mb-3">
             <label class="form-label" for="lastName">Last name</label>
-            <input th:field="*{lastName}" type="text" class="form-control" id="lastName" placeholder="Last name" required>
+            <input th:field="*{lastName}" type="text" class="form-control" id="lastName" placeholder="Last name">
+        </div>
+        <div>
+            <p th:each="error : ${#fields.errors('lastName')}" th:text="${error}" class="error"/>
         </div>
         <div class="mb-3">
             <label class="form-label" for="email">Email</label>
-            <input th:field="*{email}" type="text" class="form-control" id="email" placeholder="Email" required>
+            <input th:field="*{email}" type="text" class="form-control" id="email" placeholder="Email">
+        </div>
+        <div>
+            <p th:each="error : ${#fields.errors('email')}" th:text="${error}" class="error"/>
         </div>
         <div class="mb-3">
             <label class="form-label" for="address">Address</label>
-            <input th:field="*{address}" type="text" class="form-control" id="address" placeholder="Address" required>
+            <input th:field="*{address}" type="text" class="form-control" id="address" placeholder="Address">
+        </div>
+        <div>
+            <p th:each="error : ${#fields.errors('address')}" th:text="${error}" class="error"/>
         </div>
         <div class="mb-3">
             <label class="form-label" for="phoneNumber">Phone no.</label>
-            <input th:field="*{phoneNumber}" type="text" class="form-control" id="phoneNumber" placeholder="Phone Number" required>
+            <input th:field="*{phoneNumber}" type="text" class="form-control" id="phoneNumber" placeholder="Phone Number">
+        </div>
+        <div>
+            <p th:each="error : ${#fields.errors('phoneNumber')}" th:text="${error}" class="error"/>
         </div>
         <div class="mb-3">
             <label class="form-label" for="role">Role</label>
@@ -46,9 +54,15 @@
                         th:value="${roleOpt}" th:text="${roleOpt.getLabel()}"></option>
             </select>
         </div>
+        <div>
+            <p th:each="error : ${#fields.errors('role')}" th:text="${error}" class="error"/>
+        </div>
         <div class="mb-3">
             <label class="form-label" for="password">Password</label>
-            <input th:field="*{password}" type="password" class="form-control" id="password" placeholder="Password" required>
+            <input th:field="*{password}" type="password" class="form-control" id="password" placeholder="Password">
+        </div>
+        <div>
+            <p th:each="error : ${#fields.errors('password')}" th:text="${error}" class="error"/>
         </div>
         <button type="submit" class="btn btn-primary">Create account</button>
     </form>
