--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <title>Home</title>
@@ -7,7 +7,38 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-<div th:insert="fragments/navBar"></div>
+<!--<div th:insert="fragments/navBar"></div>-->
+<div th:insert="~{fragments/navBar.html :: body}"></div>
+
+<nav class="navbar navbar-expand-sm bg-light justify-content-center">
+  <ul class="navbar-nav">
+    <h4 class="ms-5 " >Category</h4>
+    <li class="nav-item px-3 ">
+      <a class="btn btn-outline-dark " href="/home"  >ALL</a>
+    </li>
+    <th:block th:each="restaurantCategory : ${T(com.sda.QuickBite.enums.RestaurantSpecific).values()}">
+    <li class="nav-item px-3 ">
+      <a class="btn btn-outline-dark " th:href="${'/home?category='+restaurantCategory}"  th:text="${restaurantCategory.name}"></a>
+    </li>
+    </th:block>
+  </ul>
+</nav>
+
+<div class="container my-3 2-70" style="text-align: left;">
+    <div class="container my-4">
+      <div class="container d-flex flex-wrap justify-content-center ">
+        <th:block th:each="restaurantDto : ${restaurantDtoList}">
+          <a th:href="@{/restaurantPage/{x}(x=${restaurantDto.id})}" class="nav-link m-0 p-0 btn-outline-light">
+            <div class="card bg-light text-dark m-3" style="width:300px">
+              <h4 class="card-header" th:text="${restaurantDto.name}"></h4>
+              <img th:src="${restaurantDto.logo}" alt="Imagine product">
+              <div class="card-footer" th:text="${restaurantDto.restaurantSpecific}"></div>
+            </div>
+          </a>
+        </th:block>
+      </div>
+    </div>
+</div>
 
 </body>
 </html>
