--- a/src/main/resources/templates/fragments/navBar.html
+++ b/src/main/resources/templates/fragments/navBar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"  xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" xmlns:th="http://www.thymeleaf.org">
     <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -17,19 +17,17 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
-                <div class="navbar-nav">
-
-<!--                    <a href="/home" class="nav-item nav-link active">Home</a>-->
-                    <a href="#" class="nav-item nav-link">Your Profile</a>
-                    <a href="/addRestaurant" class="nav-item nav-link">Add Restaurant</a>
+                <div th:object="${userDto}" class="navbar-nav">
+                    <a href="/yourProfile" th:if="${fullName!=null}" th:text="${fullName}" class="nav-item nav-link" style="font-weight: bold; color: red;">Your Profile</a>
+                    <a  href="#" class="nav-item nav-link">View Restaurant</a>
 <!--                    <a href="#" class="nav-item nav-link disabled" tabindex="-1">Reports</a>-->
                 </div>
                 <div class="navbar-nav ms-auto">
-                    <a href="/login" class="nav-item nav-link">Login</a>
-                    <a href="#" class="nav-item nav-link">Order History</a>
-                    <a href="#" class="nav-item nav-link">Your Cart</a>
-                    <a href="/registration" class="nav-item nav-link">Registration</a>
-                    <a href="/logout" class="nav-item nav-link">Logout</a>
+                    <a sec:authorize="isAnonymous()"  href="/login" class="nav-item nav-link">Login</a>
+                    <a sec:authorize="hasRole('BUYER')" href="/orderHistory" class="nav-item nav-link">Order History</a>
+                    <a sec:authorize="hasRole('BUYER')" href="/shoppingCart" class="nav-item nav-link">Your Cart</a>
+                    <a sec:authorize="isAnonymous()"  href="/registration" class="nav-item nav-link">Registration</a>
+                    <a sec:authorize="isAuthenticated()" href="/logout" class="nav-item nav-link">Logout</a>
                 </div>
             </div>
         </div>
