--- a/src/main/resources/templates/restaurantPage.html
+++ b/src/main/resources/templates/restaurantPage.html
@@ -32,7 +32,7 @@
 <nav class="navbar navbar-expand-sm bg-light justify-content-center">
     <ul class="navbar-nav">
         <li class="nav-item px-3 ">
-            <a class="btn btn-outline-dark " th:href="@{/addDish/{x}(x=${restaurantId})}">Add dish</a>
+            <a class="btn btn-outline-dark ">Add dish</a>
         </li>
         <li class="nav-item px-3">
             <a class="btn btn-outline-dark" href="#">Manage</a>
