--- a/src/main/resources/templates/dish.html
+++ b/src/main/resources/templates/dish.html
@@ -19,11 +19,15 @@
             <div class="card bg-dark text-white h-100">
                 <div class="card-body d-flex flex-column justify-content-between">
                     <h3 class="card-title" th:text="${dishDto.name}"></h3>
-                    <p class="card-text" th:text="${dishDto.description}"></p>
+                    <h6 class="card-text" th:text="${dishDto.description}"></h6>
+                    <h5 class="card-text" th:text="'Price: ' + ${dishDto.price}"></h5>
+                    <form th:action="@{/addToCard/{x}(x=${dishDto.id})}" method="post" >
                     <h5 class="card-text" th:text="'Price: ' + ${dishDto.price}"></h5>
                     <div class="mt-3 d-flex justify-content-end">
-                        <button type="button" class="btn btn-outline-primary mr-2">Add to cart</button>
-                        <button type="button" class="btn btn-outline-secondary" onclick="location.href='/restaurantPage/1'">Back to menu</button>
+
+                        <button type="submit" class="btn btn-outline-primary mr-2">Add to cart</button>
+                        </form>
+                        <button type="button" class="btn btn-outline-secondary" onclick="history.back()">Back to menu</button>
                     </div>
                 </div>
             </div>
