--- a/src/main/resources/templates/restaurantPage.html
+++ b/src/main/resources/templates/restaurantPage.html
@@ -32,7 +32,7 @@
 <nav class="navbar navbar-expand-sm bg-light justify-content-center">
     <ul class="navbar-nav">
         <li class="nav-item px-3 ">
-            <a class="btn btn-outline-dark ">Add dish</a>
+            <a class="btn btn-outline-dark " th:href="@{/restaurant/{x}/addDish (x=${restaurantId})}">Add dish</a>
         </li>
         <li class="nav-item px-3">
             <a class="btn btn-outline-dark" href="#">Manage</a>
@@ -52,13 +52,11 @@
                             <h4 class="card-header" th:text="${dishDto.name}"></h4>
                             <img th:src="${dishDto.image}" alt="Imagine product">
                             <div class="card-footer" th:text="${dishDto.price}"></div>
-
                         </div>
                     </a>
                 </th:block>
             </div>
         </div>
-
     </th:block>
 </div>
 </body>
