--- a/src/main/resources/templates/orderCart.html
+++ b/src/main/resources/templates/orderCart.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Order Cart</title>
+    <title>Shopping Cart</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-
-THIS IS THE ORDERCART
-
-
+<div th:insert="~{fragments/navBar.html :: body}"></div>
 </body>
 </html>
