--- a/src/main/resources/templates/dish.html
+++ b/src/main/resources/templates/dish.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Dish Page</title>
@@ -18,21 +18,47 @@
         <div class="col-md-8">
             <div class="card bg-dark text-white h-100">
                 <div class="card-body d-flex flex-column justify-content-between">
-                    <h3 class="card-title" th:text="${dishDto.name}"></h3>
-                    <h6 class="card-text" th:text="${dishDto.description}"></h6>
-                    <h5 class="card-text" th:text="'Price: ' + ${dishDto.price}"></h5>
-                    <form th:action="@{/addToCard/{x}(x=${dishDto.id})}" method="post" >
-                    <h5 class="card-text" th:text="'Price: ' + ${dishDto.price}"></h5>
-                    <div class="mt-3 d-flex justify-content-end">
+                    <div class="card-title" th:text="${dishDto.name}"></div>
+                    <div class="card-text" th:text="${dishDto.description}"></div>
+                    <div class="card-text" th:text="'Price: RON ' + ${dishDto.price}"></div>
 
-                        <button type="submit" class="btn btn-outline-primary mr-2">Add to cart</button>
-                        </form>
-                        <button type="button" class="btn btn-outline-secondary" onclick="history.back()">Back to menu</button>
+                    <form th:action="@{'/addToCart/' + ${dishId}}" method="post">
+                    <div  sec:authorize="hasRole('BUYER')" class="mb-3 quantity">
+                        <label class="form-label" for="quantity">Quantity</label>
+                        <input type="number" min="1" class="form-control quantity-input" id="quantity" name="quantity">
+                        <input type="hidden" id="dishId" th:value="${dishId}">
+
                     </div>
+
+
+
+                        <div class="mt-3 d-flex justify-content-end">
+
+                            <nav class="navbar navbar-expand-sm justify-content-center category-nav">
+                                <ul class="navbar-nav category-nav">
+                                    <li sec:authorize="hasRole('BUYER')" class="nav-item px-3">
+                                        <button type="submit" class="btn btn-primary">Add to Cart</button>
+                                    </li>
+                                    <li sec:authorize="hasRole('SELLER')" class="nav-item px-3">
+                                        <a class="btn btn-outline-dark" th:href="@{/editDish/{x} (x=${dishDto.id})}">Update Dish</a>
+                                    </li>
+                                    <!--                                           th:action="@{/editDish/{x}(x=${dishDto.id})}"-->
+                                    <li class="nav-item px-3">
+                                        <a class="btn btn-outline-dark" href="javascript:history.go(-1)">Back To
+                                            Menu</a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
+
+                    </form>
+
                 </div>
             </div>
         </div>
+
     </div>
+</div>
 </div>
 </body>
 </html>
