--- a/src/main/resources/templates/fragments/navBar.html
+++ b/src/main/resources/templates/fragments/navBar.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-    <meta charset="UTF-8" xmlns:th="http://www.thymeleaf.org">
+    <meta charset="UTF-8">
     <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 <div class="m-4">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-image: url('/img/canvas.jpg');
+    background-repeat: repeat;">
         <div class="container-fluid">
             <a href="/home" class="navbar-brand">
-                <img src="/img/quick_bite.png">
+                <img class="navbar-logo" src="/img/qb-logo-round.png" style="height: 150px">
             </a>
+
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
             <div class="collapse navbar-collapse" id="navbarCollapse">
-                <div th:object="${userDto}" class="navbar-nav">
-                    <a href="/yourProfile" th:if="${fullName!=null}" th:text="${fullName}" class="nav-item nav-link"
-                       style="font-weight: bold; color: red;">Your Profile</a>
-                    <a href="#" class="nav-item nav-link">View Restaurant</a>
-                    <div class="navbar-nav">
-                        <a href="/addRestaurant" class="nav-item nav-link">Add Restaurant</a>
-                    </div>
+                <div  th:object="${userDto}" class="navbar-nav">
+                    <a href="/yourProfile" th:if="${fullName != null}" th:text="${fullName}" class="nav-item nav-link" style="font-weight: bold; color: red;">Your Profile</a>
+                    <a  th:object="${activePage}" th:if="${activePage != '/sellerPage'}" sec:authorize="hasRole('SELLER')" href="/sellerPage" class="nav-item nav-link">Your Restaurants</a>
+                    <a  th:object="${activePage}" th:if="${activePage == '/sellerPage'}" sec:authorize="hasRole('SELLER')" href="/addRestaurant" class="nav-item nav-link">Add Restaurant</a>
+                </div>
 
+                <div class="navbar-nav ms-auto">
 
-                    <div class="navbar-nav ms-auto">
-                        <a sec:authorize="isAnonymous()" href="/login" class="nav-item nav-link">Login</a>
-                        <a sec:authorize="hasRole('BUYER')" href="/orderHistory" class="nav-item nav-link">Order
-                            History</a>
-                        <a sec:authorize="hasRole('BUYER')" href="/shoppingCart" class="nav-item nav-link">Your Cart</a>
-                        <a sec:authorize="isAnonymous()" href="/registration" class="nav-item nav-link">Registration</a>
-                        <a sec:authorize="isAuthenticated()" href="/logout" class="nav-item nav-link">Logout</a>
-                    </div>
+                    <a sec:authorize="isAnonymous()" href="/login" class="nav-item nav-link">Login</a>
+                    <a sec:authorize="hasRole('BUYER')" href="#" class="nav-item nav-link">Order History</a>
+                    <a sec:authorize="hasRole('BUYER')" href="/orderCart" class="nav-item nav-link">Your Cart</a>
+                    <a sec:authorize="isAnonymous()" href="/registration" class="nav-item nav-link">Registration</a>
+                    <a sec:authorize="isAuthenticated()" href="/logout" class="nav-item nav-link">Logout</a>
                 </div>
             </div>
         </div>
