--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,12 +5,13 @@
   <title>Home</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 <!--<div th:insert="fragments/navBar"></div>-->
 <div th:insert="~{fragments/navBar.html :: body}"></div>
 
-<nav class="navbar navbar-expand-sm bg-light justify-content-center">
+<nav class="navbar navbar-expand-sm justify-content-center category-nav">
   <ul class="navbar-nav">
     <h4 class="ms-5 " >Category</h4>
     <li class="nav-item px-3 ">
@@ -25,13 +26,13 @@
 </nav>
 
 <div class="container my-3 2-70" style="text-align: left;">
-    <div class="container my-4">
+    <div class="container my-4 restaurant-container">
       <div class="container d-flex flex-wrap justify-content-center ">
         <th:block th:each="restaurantDto : ${restaurantDtoList}">
           <a th:href="@{/restaurantPage/{x}(x=${restaurantDto.id})}" class="nav-link m-0 p-0 btn-outline-light">
             <div class="card bg-light text-dark m-3" style="width:300px">
               <h4 class="card-header" th:text="${restaurantDto.name}"></h4>
-              <img th:src="${restaurantDto.logo}" alt="Imagine product">
+              <img th:src="${restaurantDto.logo}" alt="Imagine product" style="background: bisque">
               <div class="card-footer" th:text="${restaurantDto.restaurantSpecific}"></div>
             </div>
           </a>
