--- a/src/main/resources/templates/restaurantPage.html
+++ b/src/main/resources/templates/restaurantPage.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Restaurant Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 <!--<div th:insert="fragments/navBar"></div>-->
@@ -17,7 +18,7 @@
 
         <div class="card-img-overlay p-5 text-white ">
             <img class="card-header" th:src="${restaurantDto.logo}" style=" height: 150px" alt="Product image">
-            <div style="display: flex; flex-direction: column; align-items: flex-start; font-size: 50px; padding-top: 100px">
+            <div style="display: flex; flex-direction: column; align-items: flex-start; font-size: 50px;">
                 <div class="card-body" th:text="'Nume Restaurant: ' + ${restaurantDto.name}"></div>
                 <div class="card-body" th:text="'Descriere: ' + ${restaurantDto.description}"></div>
                 <div class="card-body" th:text="'Specific: ' + ${restaurantDto.restaurantSpecific}"></div>
@@ -29,16 +30,17 @@
     </div>
 </div>
 
-<nav class="navbar navbar-expand-sm bg-light justify-content-center">
-    <ul class="navbar-nav">
-        <li class="nav-item px-3 ">
-            <a class="btn btn-outline-dark " th:href="@{/restaurant/{x}/addDish (x=${restaurantId})}">Add dish</a>
+<nav  sec:authorize="hasRole('SELLER')" class="navbar navbar-expand-sm justify-content-center category-nav" >
+    <ul class="navbar-nav category-nav">
+        <li class="nav-item px-3">
+            <a class="btn btn-outline-dark" th:href="@{/restaurant/{x}/addDish (x=${restaurantId})}">Add dish</a>
         </li>
         <li class="nav-item px-3">
-            <a class="btn btn-outline-dark" href="#">Manage</a>
+            <a class="btn btn-outline-dark"  th:href="@{/editRestaurant/{x} (x=${restaurantId})}">Edit Restaurant</a>
         </li>
     </ul>
 </nav>
+
 
 
 <div class="container my-3 2-70" style="text-align: left;">
