--- a/src/main/resources/templates/yourProfile.html
+++ b/src/main/resources/templates/yourProfile.html
@@ -1,10 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Your Profile</title>
+    <meta charset="UTF-8" xmlns:th="http://www.thymeleaf.org">
+    <title>Seller</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-THIS IS PROFILE PAGE
+<div th:insert="~{fragments/navBar.html :: body}"></div>
+<div  class="col-md-6 mx-auto" >
+    <h1>Your profile</h1>
+    <form th:object="${userProfileDto}"  action="/yourProfile" method="post">
+        <div class="mb-3">
+            <label class="form-label" for="firstName">First name</label>
+            <input th:field="*{firstName}" type="text" class="form-control" id="firstName" placeholder="First name">
+        </div>
+        <div>
+            <p th:each="error : ${#fields.errors('firstName')}" th:text="${error}" class="error"/>
+        </div>
+        <div class="mb-3">
+            <label class="form-label" for="lastName">Last name</label>
+            <input th:field="*{lastName}" type="text" class="form-control" id="lastName" placeholder="Last name">
+        </div>
+        <div>
+            <p th:each="error : ${#fields.errors('lastName')}" th:text="${error}" class="error"/>
+        </div>
+        <div class="mb-3">
+            <label class="form-label" for="email">Email</label>
+            <input th:field="*{email}" type="text" class="form-control" id="email" placeholder="Email">
+        </div>
+        <div>
+            <p th:each="error : ${#fields.errors('email')}" th:text="${error}" class="error"/>
+        </div>
+        <div class="mb-3">
+            <label class="form-label" for="address">Address</label>
+            <input th:field="*{address}" type="text" class="form-control" id="address" placeholder="Address">
+        </div>
+        <div>
+            <p th:each="error : ${#fields.errors('address')}" th:text="${error}" class="error"/>
+        </div>
+        <div class="mb-3">
+            <label class="form-label" for="phoneNumber">Phone no.</label>
+            <input th:field="*{phoneNumber}" type="text" class="form-control" id="phoneNumber" placeholder="Phone Number">
+        </div>
+        <div>
+            <p th:each="error : ${#fields.errors('phoneNumber')}" th:text="${error}" class="error"/>
+        </div>
+
+        <nav class="navbar navbar-expand-sm justify-content-center category-nav">
+            <ul class="navbar-nav category-nav">
+                <li class="nav-item px-3">
+                    <button type="submit" class="btn btn-primary">Update</button>
+                </li>
+                <li class="nav-item px-3">
+                    <a href="/changePassword" class="btn btn-primary">Change Password</a>
+                </li>
+            </ul>
+        </nav>
+
+
+
+    </form>
+</div>
+
 </body>
 </html>
