--- a/src/main/resources/templates/orderHistory.html
+++ b/src/main/resources/templates/orderHistory.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Order History</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <style>
@@ -12,23 +12,74 @@
     </style>
 </head>
 <body>
-<div th:insert="fragments/navBar"></div>
+<div th:insert="~{fragments/navBar.html :: body}"></div>
 <div class="container-fluid mt-3">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm bg-cyan text-white p-3"><button type="button" class="btn btn-outline-dark text-dark">Back to HOME</button></div>
+            <div class="col-sm bg-cyan text-white p-3">
+                <a th:href="@{/home}" class="btn btn-outline-dark text-dark">Back to HOME</a>
+            </div>
             <div class="col-sm bg-cyan text-white p-3"></div>
         </div>
     </div>
+
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-sm bg-cyan text-white p-3">Date</div>
-            <div class="col-sm bg-cyan text-white p-3">Order No</div>
-            <div class="col-sm bg-cyan text-white p-3">Restaurant</div>
-            <div class="col-sm bg-cyan text-white p-3">Total amount</div>
-            <div class="col-sm bg-cyan text-white p-3">Status</div>
-            <div class="col-sm bg-cyan text-white p-3"><button type="button" class="btn btn-outline-dark text-dark">Order details</button></div>
-        </div>
+        <h2>Order history</h2>
+        <table class="table table-hover ">
+            <thead>
+            <tr>
+                <th>Date and time</th>
+                <th>Order No.</th>
+                <th>Restaurant</th>
+                <th>Total amount</th>
+                <th>Status</th>
+                <th>Details</th>
+            </tr>
+            </thead>
+            <tbody>
+            <th:block th:object="${foodOrderDtoList}" th:each="foodOrderDto : ${foodOrderDtoList}">
+
+                    <tr>
+                        <td th:text="${foodOrderDto.date}"></td>
+                        <td th:text="${foodOrderDto.foodOrderId}"></td>
+                        <td th:text="${foodOrderDto.restaurantName}"></td>
+                        <td th:text="${foodOrderDto.totalAmount + ' RON'}"></td>
+                        <td th:text="${foodOrderDto.status}"></td>
+                        <td >
+                            <a th:href="@{/orderHistory/foodOrder/{x} (x=${foodOrderDto.foodOrderId})}" >
+                                <button type="button" class="btn btn-primary btn-sm" th:text="Details"></button>
+                            </a>
+                        </td>
+                    </tr>
+
+            </th:block>
+            </tbody>
+        </table>
+
+        <!--        <div class="row">-->
+        <!--            <div class="col-sm bg-cyan text-white p-3">Date</div>-->
+        <!--            <div class="col-sm bg-cyan text-white p-3">Order No</div>-->
+        <!--            <div class="col-sm bg-cyan text-white p-3">Restaurant</div>-->
+        <!--            <div class="col-sm bg-cyan text-white p-3">Total amount</div>-->
+        <!--            <div class="col-sm bg-cyan text-white p-3">Status</div>-->
+        <!--            <div class="col-sm bg-cyan text-white p-3">-->
+        <!--                <button type="button" class="btn btn-outline-dark text-dark">Order details</button>-->
+        <!--            </div>-->
+        <!--        </div>-->
+        <!--        <th:block>-->
+        <!--            <div>-->
+        <!--                <div class="row">-->
+        <!--                    <div class="col-sm bg-cyan text-white p-3">Date</div>-->
+        <!--                    <div class="col-sm bg-cyan text-white p-3">Order No</div>-->
+        <!--                    <div class="col-sm bg-cyan text-white p-3">Restaurant</div>-->
+        <!--                    <div class="col-sm bg-cyan text-white p-3">Total amount</div>-->
+        <!--                    <div class="col-sm bg-cyan text-white p-3">Status</div>-->
+        <!--                    <div class="col-sm bg-cyan text-white p-3">-->
+        <!--                        <button type="button" class="btn btn-outline-dark text-dark">Order details</button>-->
+        <!--                    </div>-->
+        <!--                </div>-->
+        <!--            </div>-->
+        <!--        </th:block>-->
     </div>
 </div>
 
