--- a/src/main/resources/templates/addRestaurant.html
+++ b/src/main/resources/templates/addRestaurant.html
@@ -64,6 +64,7 @@
 <!--            <p th:each="error : ${#fields.errors('backgroundImage')}" th:text="${error}" class="error"/>-->
 <!--        </div>-->
         <button type="submit" class="btn btn-primary">Add Restaurant</button>
+        <a th:href="@{/home}" class="btn btn-primary">Cancel</a>
     </form>
 </div>
 </body>
