--- a/src/main/resources/templates/restaurant.html
+++ b/src/main/resources/templates/restaurant.html
@@ -48,7 +48,7 @@
             <h1 class="ms-5 " th:text="${dishCategoryDto.categoryName}"></h1>
             <div class="container d-flex flex-wrap justify-content-left ">
                 <th:block th:each="dishDto : ${dishCategoryDto.dishDtoList}">
-                    <a th:href="@{/dish/{x}(x=${dishDto.id})}" class="nav-link m-0 p-0 btn-outline-light">
+                    <a th:href="@{'/dish/' + ${dishDto.id} + '?restaurantId='+${restaurantId}}" class="nav-link m-0 p-0 btn-outline-light">
                         <div class="card bg-light text-dark m-3" style="width:300px">
                             <h4 class="card-header" th:text="${dishDto.name}"></h4>
                             <img th:src="${dishDto.image}" alt="Imagine product">
@@ -68,7 +68,7 @@
             <h1 class="ms-5 " th:text="${dishCategoryDto.categoryName}"></h1>
             <div class="container d-flex flex-wrap justify-content-left ">
                 <th:block th:each="dishDto : ${dishCategoryDto.dishDtoList}">
-                    <a th:href="@{/dish/{x}(x=${dishDto.id})}" class="nav-link m-0 p-0 btn-outline-light">
+                    <a th:href="@{'/dish/' + ${dishDto.id} + '?restaurantId='+${restaurantId}}" class="nav-link m-0 p-0 btn-outline-light">
                         <div class="card bg-light text-dark m-3" style="width:300px">
                             <h4 class="card-header" th:text="${dishDto.name}"></h4>
                             <img th:src="${dishDto.image}" alt="Imagine product">
