--- a/src/main/resources/templates/viewOrder.html
+++ b/src/main/resources/templates/viewOrder.html
@@ -31,13 +31,13 @@
                         </div>
 
                         <div class="mx-n5 px-5 py-4" style="background-color: #f2f2f2;">
-                            <th:block th:each="dishOrderDetailDto : ${dishOrderDetailDtoList}">
+                            <th:block th:each="orderEntryDto : ${orderEntryDtoList}">
                                 <div class="row">
                                     <div class="col-md-8 col-lg-9">
-                                        <p th:text="${dishOrderDetailDto.quantity + ' X ' + dishOrderDetailDto.dishName}"></p>
+                                        <p th:text="${orderEntryDto.quantity + ' X ' + orderEntryDto.dishName}"></p>
                                     </div>
                                     <div class="col-md-4 col-lg-3">
-                                        <p th:text="${dishOrderDetailDto.costPerDish + ' RON'}"></p>
+                                        <p th:text="${orderEntryDto.costPerDish + ' RON'}"></p>
                                     </div>
                                 </div>
                             </th:block>
@@ -56,24 +56,23 @@
                                 <div class="horizontal-timeline">
                                     <ul class="list-inline items d-flex justify-content-between">
                                         <li class="list-inline-item items-list">
-                                            <p class="py-1 px-2 rounded text-white" style="background-color: #f37a27;">On the way
-                                            </p>
+                                            <p th:text="${foodOrderDto.status}" class="py-1 px-2 rounded text-white" style="background-color: #f37a27;"></p>
                                         </li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="col-lg-12">
-                            <div class="horizontal-timeline">
-                                <ul class="list-inline items d-flex justify-content-right">
-                                    <li class="list-inline-item items-list">
-                                        <a th:href="@{/orderHistory}" >
-                                            <button type="button" class="btn btn-primary btn-sm" th:text="Back"></button>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
+                                <div class="horizontal-timeline">
+                                    <ul class="list-inline items d-flex justify-content-right">
+                                        <li class="list-inline-item items-list">
+                                            <a th:href="@{/orderHistory}" >
+                                                <button type="button" class="btn btn-primary btn-sm" th:text="Back"></button>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
 
-                        </div>
+                            </div>
                         </div>
 
                         <p class="mt-4 pt-2 mb-0">Want any help? <a href="#" style="color: #f37a27;">Please contact
