--- a/src/main/resources/templates/editRestaurant.html
+++ b/src/main/resources/templates/editRestaurant.html
@@ -51,14 +51,14 @@
     <!--        </div>-->
     <div class="mb-3">
       <label class="form-label" for="logo">Logo</label>
-      <input type="file" name="restaurantLogo" class="form-control" id="logo" required>
+      <input type="file" name="restaurantLogo" class="form-control" id="logo" >
     </div>
     <!--        <div>-->
     <!--            <p th:each="error : ${#fields.errors('logo')}" th:text="${error}" class="error"/>-->
     <!--        </div>-->
     <div class="mb-3">
       <label class="form-label" for="backgroundImage">Background image</label>
-      <input type="file" name="restaurantBackground" class="form-control" id="backgroundImage" required>
+      <input type="file" name="restaurantBackground" class="form-control" id="backgroundImage" >
     </div>
     <!--        <div>-->
     <!--            <p th:each="error : ${#fields.errors('backgroundImage')}" th:text="${error}" class="error"/>-->
