--- a/src/main/resources/templates/sellerPage.html
+++ b/src/main/resources/templates/sellerPage.html
@@ -27,7 +27,7 @@
     <div class="container my-4">
         <div class="container d-flex flex-wrap justify-content-center ">
             <th:block th:each="restaurantDto : ${restaurantDtoList}">
-                <a th:href="@{/restaurantPage/{x}(x=${restaurantDto.id})}" class="nav-link m-0 p-0 btn-outline-light">
+                <a th:href="@{/restaurant/{x}(x=${restaurantDto.id})}" class="nav-link m-0 p-0 btn-outline-light">
                     <div class="card bg-light text-dark m-3" style="width:300px">
                         <h4 class="card-header" th:text="${restaurantDto.name}"></h4>
                         <img th:src="${restaurantDto.logo}" alt="Imagine product" style="background: bisque">
